--- a/UseCase_0/Jenkinsfile
+++ b/UseCase_0/Jenkinsfile
@@ -14,16 +14,23 @@ pipeline {
                         passwordVariable: 'GIT_PASSWORD'
                     )]){
                         sh '''
-                            rm -rf $PROJECT_DIR
                             mkdir -p $PROJECT_DIR
                             cd $PROJECT_DIR
                             echo "Triggered Repo is: $REPO_NAME"
-                            
-                            
+
+                            if [ "$REPO_NAME" = "Student_management_application_backend" ]; then
+                                echo "Removing existing backend repo directory (if any)..."
+                                rm -rf Student_management_application_backend
                                 echo "Cloning backend repo..."
                                 git clone https://github.com/priyanshusaineni/Student_management_application_backend.git
+                            elif [ "$REPO_NAME" = "Student_management_application_frontend" ]; then
+                                echo "Removing existing frontend repo directory (if any)..."
+                                rm -rf Student_management_application_frontend
                                 echo "Cloning frontend repo..."
                                 git clone https://github.com/priyanshusaineni/Student_management_application_frontend.git
+                            else
+                                echo "No matching repository to clone."
+                            fi                            
                         '''
                     }
                 }
