--- a/Duplicated/Jenkinsfile
+++ b/Duplicated/Jenkinsfile
@@ -43,12 +43,15 @@ pipeline {
                 script{
                     sh '''
                         cd $PROJECT_DIR
+
+                        sudo docker network create app_network || true
+
                         if [ "$REPO_NAME" = "Student_management_application_backend" ]; then
-                            echo "Building only Backend image ..."   
-                            sudo docker build -t usecase0/backend ./Student_management_application_backend 
+                            echo "Building only Backend image ..."       
+                            sudo docker build -t $DOCKERHUB_USERNAME/backend ./Student_management_application_backend
                         elif [ "$REPO_NAME" = "Student_management_application_frontend" ]; then
                             echo "Building only frontend image ..."
-                            sudo docker build -t usecase0/frontend ./Student_management_application_frontend
+                            sudo docker build -t $DOCKERHUB_USERNAME/frontend ./Student_management_application_frontend
                         else
                             echo "There are no updates in the repository..."
                         fi
@@ -60,21 +63,25 @@ pipeline {
         stage('Pushing Images to Docker hub'){
             steps{
                 script{
-                    // withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'aws-credentials']]) {
-                        sh """
-                            aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 600802700666.dkr.ecr.ap-south-1.amazonaws.com
+                    withCredentials([usernamePassword(
+                        credentialsId: 'DOCKERHUB_CRED',
+                        usernameVariable: 'DOCKERHUB_USR',
+                        passwordVariable: 'DOCKERHUB_PASSWD'
+                    )]){
+                        sh '''
+                            echo "$DOCKERHUB_PASSWD" | sudo docker login -u "$DOCKERHUB_USR" --password-stdin 
 
-                        if [ "$REPO_NAME" = "Student_management_application_backend" ]; then
-                                docker tag usecase0/backend:latest 600802700666.dkr.ecr.ap-south-1.amazonaws.com/usecase0/backend:latest
-                                docker push 600802700666.dkr.ecr.ap-south-1.amazonaws.com/usecase0/backend:latest
-                        elif [ "$REPO_NAME" = "Student_management_application_frontend" ]; then
-                                docker tag usecase0/frontend:latest 600802700666.dkr.ecr.ap-south-1.amazonaws.com/usecase0/frontend:latest
-                                docker push 600802700666.dkr.ecr.ap-south-1.amazonaws.com/usecase0/frontend:latest
-                        else
-                            echo "There are no updates in the repository..."
-                        fi
-                        """
-                    // }
+                            if [ "$REPO_NAME" = "Student_management_application_backend" ]; then
+                                echo "Pushing only Backend image ..."  
+                                sudo docker push $DOCKERHUB_USERNAME/backend 
+                            elif [ "$REPO_NAME" = "Student_management_application_frontend" ]; then
+                                echo "Pushing only frontend image ..."
+                                sudo docker push $DOCKERHUB_USERNAME/frontend
+                            else
+                                echo "There are no updates in the repository..."
+                            fi
+                        '''
+                    }
                     
                 }
             }
@@ -97,9 +104,7 @@ pipeline {
                     
                             ssh -o StrictHostKeyChecking=no -i $KEY_FILE $INSTANCE_USER@$IP_ADDRESS " \
                                 cd ~/Student-management-application/Student_management_application_frontend && \
-                                aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 600802700666.dkr.ecr.ap-south-1.amazonaws.com \
                                 docker-compose down || true && \
-                                docker-compose pull \
                                 docker-compose up -d --build \
                             "
                         '''
