--- a/UseCase_0/Jenkinsfile
+++ b/UseCase_0/Jenkinsfile
@@ -97,9 +97,9 @@ pipeline {
                     
                             ssh -o StrictHostKeyChecking=no -i $KEY_FILE $INSTANCE_USER@$IP_ADDRESS " \
                                 cd ~/Student-management-application/Student_management_application_frontend && \
-                                aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 600802700666.dkr.ecr.ap-south-1.amazonaws.com \
+                                aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 600802700666.dkr.ecr.ap-south-1.amazonaws.com &&\
                                 docker-compose down || true && \
-                                docker-compose pull \
+                                docker-compose pull &&\
                                 docker-compose up -d --build \
                             "
                         '''
